--- a/css/style.scss
+++ b/css/style.scss
@@ -85,11 +85,7 @@ header {
 
 @media (min-width: 769px) {
     .topimage{
-     background-image: url("../images/IMG_0008.jpg");
      height: 500px;
-     width: 100%;
-     background-size: cover;
-     background-position: center center;
     }
 }
 
@@ -154,30 +150,16 @@ h3 {
 }
 
 
-#miko_images {
-  width: 80%;
-  margin: 0 auto;
-   a {
-      display: block;
-      position: relative;
-
-      .iyashi {
-        position: absolute;
-        height: 150%;
-        width: 80%;
-
-        .button-readmore {
-          text-align: center;
-          width: 125%;
-          display: block;
-          color: #FFF;
-          background-color: $keyColor;
-          @include border-radius(7px);
-          font-size: 2rem;
-          text-align: center;
-        }
-      }
-}
+#miko_images a{
+    width: 80%;
+    height: 150%;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    color: #FFF;
+    background-color: $keyColor;
+    @include border-radius(7px);
+    font-size: 2rem;
 }
 
   
